benchmark/helm_charts/longhorn/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: longhorn-gateway
  namespace: longhorn-system
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTP
      port: 80
      name: web-lh
      allowedRoutes:
        namespaces:
          from: Same
      # hostname: longhorn.iyers.org
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-route
  namespace: longhorn-system
spec:
  parentRefs:
    - name: longhorn-gateway
      namespace: longhorn-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
